--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: apps/render_cf.py --job-types-file job_types.yml
+      - run: python apps/render_cf.py --job-types-file job_types.yml
 
       - uses: scottbrenner/cfn-lint-action@master
         with:
@@ -57,7 +57,12 @@ jobs:
         with:
           ruby-version: 2.7
       - run: gem install statelint
-      - run: apps/render_cf.py --job-types-file job_types.yml
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+      - run: |
+          pip install -r requirements-all.txt
+          python apps/render_cf.py --job-types-file job_types.yml
 
       - run: |
           sed -i 's/"Resource": "${.*}"/"Resource": "foo:bar"/' apps/step-function.json
