--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -26,7 +26,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: python apps/render_cf.py --job-types-file job_types.yml
+      - uses: actions/setup-python@v1
+        with:
+          python-version: 3.8
+
+      - run: |
+          pip install -r requirements-all.txt
+          python apps/render_cf.py --job-types-file job_types.yml
 
       - uses: scottbrenner/cfn-lint-action@master
         with:
