--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: install dependancies and render templates
+      - name: install dependencies and render templates
         run: |
           pip install --upgrade pip
           pip install -r requirements-all.txt
