--- a/apps/get-files/get-files-cf.yml
+++ b/apps/get-files/get-files-cf.yml
@@ -52,7 +52,7 @@ Resources:
         Variables:
           BUCKET: !Ref Bucket
       Code: src/
-      Handler: get-files.lambda_handler
+      Handler: get_files.lambda_handler
       MemorySize: 128
       Role: !GetAtt Role.Arn
       Runtime: python3.8
