--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
 
       - run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-all.txt
+          python -m pip install -r requirements-all.txt
           python apps/render_cf.py --job-types-file job_types.yml
 
       - name: run pytest
