grant s3 read permissions to container tasks to support autorift fetching from jpl buckets

--- a/apps/compute-cf.yml
+++ b/apps/compute-cf.yml
@@ -89,6 +89,8 @@ Resources:
           Principal:
             Service: ecs-tasks.amazonaws.com
           Effect: Allow
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
       Policies:
         - PolicyName: policy
           PolicyDocument:
