--- a/.github/workflows/deploy_autorift.yml
+++ b/.github/workflows/deploy_autorift.yml
@@ -8,9 +8,6 @@ on:
 env:
   AWS_REGION: us-west-2
   TEMPLATE_BUCKET: cf-templates-igavixdzdy7k-us-west-2
-  RTC_GAMMA_REPOSITORY: 626226570674.dkr.ecr.us-east-1.amazonaws.com/hyp3-rtc-gamma
-  INSAR_GAMMA_REPOSITORY: 626226570674.dkr.ecr.us-east-1.amazonaws.com/hyp3-insar-gamma
-  AUTORIFT_REPOSITORY: 626226570674.dkr.ecr.us-east-1.amazonaws.com/hyp3-autorift
   STACK_NAME: hyp3-autorift
   DOMAIN_NAME: hyp3-autorift.asf.alaska.edu
   IMAGE_TAG: latest
@@ -41,16 +38,17 @@ jobs:
         with:
           python-version: 3.8
 
-      - name: install dependancies
-        working-directory: api
+      - name: install dependancies and render templates
         run: |
           pip install --upgrade pip
-          pip install -r requirements.txt -t src
+          pip install -r requirements-all.txt
+          python apps/render_cf.py --job-types-file job_types.yml
+          pip install -r apps/api/requirements-api.txt -t apps/api/src
 
       - name: Package and deploy
         run: |
           aws cloudformation package \
-            --template-file cloudformation.yml \
+            --template-file apps/main-cf.yml \
             --s3-bucket ${TEMPLATE_BUCKET} \
             --output-template-file packaged.yml
           aws cloudformation deploy \
@@ -63,8 +61,6 @@ jobs:
                 SubnetIds="${SUBNET_IDS}" \
                 EDLUsername="${EDL_USERNAME}" \
                 EDLPassword="${EDL_PASSWORD}" \
-                RtcGammaImage="${RTC_GAMMA_REPOSITORY}:${IMAGE_TAG}" \
-                InsarGammaImage="${INSAR_GAMMA_REPOSITORY}:${IMAGE_TAG}" \
-                AutoriftImage="${AUTORIFT_REPOSITORY}:${IMAGE_TAG}" \
+                ImageTag="${IMAGE_TAG}" \
                 DomainName="${DOMAIN_NAME}" \
                 CertificateArn="${CERTIFICATE_ARN}"
