Revert "no token?"
This reverts commit 68452fa120b9e97f92942345ecbb3000e4db1b3a.

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -20,3 +20,5 @@ jobs:
         with:
           fileName: CHANGELOG.md
           noChangelogLabel: bumpless
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
