Added monitoring stack to main stack

--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -101,6 +101,13 @@ Resources:
         ImageTag: !Ref ImageTag
       TemplateURL: workflow-cf.yml
 
+  Monitoring:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        StepFunctionArn: !GetAtt StepFunction.Outputs.StepFunctionArn
+        ApiId: !GetAtt Api.Outputs.ApiId
+
   LogBucket:
     Type: AWS::S3::Bucket
     Properties:
