--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -107,6 +107,7 @@ Resources:
       Parameters:
         StepFunctionArn: !GetAtt StepFunction.Outputs.StepFunctionArn
         ApiId: !GetAtt Api.Outputs.ApiId
+      TemplateURL: monitoring-cf.yml
 
   LogBucket:
     Type: AWS::S3::Bucket
