--- a/apps/api/api-cf.yml
+++ b/apps/api/api-cf.yml
@@ -3,6 +3,9 @@ Parameters:
   JobsTable:
     Type: String
 
+  UserTable:
+    Type: String
+
   AuthPublicKey:
     Type: String
 
@@ -126,7 +129,8 @@ Resources:
     Properties:
       Environment:
         Variables:
-          TABLE_NAME: !Ref JobsTable
+          JOB_TABLE_NAME: !Ref JobsTable
+          USER_TABLE_NAME: !Ref UserTable
           AUTH_PUBLIC_KEY: !Ref AuthPublicKey
           AUTH_ALGORITHM: !Ref AuthAlgorithm
           MONTHLY_JOB_QUOTA_PER_USER: !Ref MonthlyJobQuotaPerUser
