--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -71,6 +71,7 @@ Resources:
     Properties:
       Parameters:
         JobsTable: !Ref JobsTable
+        UserTable: !Ref UserTable
         AuthPublicKey: !Ref AuthPublicKey
         AuthAlgorithm: !Ref AuthAlgorithm
         DomainName: !Ref DomainName
@@ -184,3 +185,14 @@ Resources:
               KeyType: HASH
           Projection:
             ProjectionType: ALL
+
+  UserTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: user_id
+          AttributeType: S
+      KeySchema:
+        - AttributeName: user_id
+          KeyType: HASH
