--- a/apps/api/api-cf.yml
+++ b/apps/api/api-cf.yml
@@ -3,7 +3,7 @@ Parameters:
   JobsTable:
     Type: String
 
-  UserTable:
+  UsersTable:
     Type: String
 
   AuthPublicKey:
@@ -129,8 +129,8 @@ Resources:
     Properties:
       Environment:
         Variables:
-          JOB_TABLE_NAME: !Ref JobsTable
-          USER_TABLE_NAME: !Ref UserTable
+          JOBS_TABLE_NAME: !Ref JobsTable
+          USERS_TABLE_NAME: !Ref UsersTable
           AUTH_PUBLIC_KEY: !Ref AuthPublicKey
           AUTH_ALGORITHM: !Ref AuthAlgorithm
           MONTHLY_JOB_QUOTA_PER_USER: !Ref MonthlyJobQuotaPerUser
