--- a/apps/api/api-cf.yml
+++ b/apps/api/api-cf.yml
@@ -123,6 +123,10 @@ Resources:
                   - dynamodb:PutItem
                   - dynamodb:Query
                 Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${JobsTable}*"
+              - Effect: Allow
+                Action:
+                  - dynamodb:Query
+                Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${UsersTable}*"
 
   Lambda:
     Type: AWS::Lambda::Function
