--- a/apps/api/api-cf.yml
+++ b/apps/api/api-cf.yml
@@ -122,10 +122,11 @@ Resources:
                 Action:
                   - dynamodb:PutItem
                   - dynamodb:Query
+                  - dynamodb:GetItem
                 Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${JobsTable}*"
               - Effect: Allow
                 Action:
-                  - dynamodb:Query
+                  - dynamodb:GetItem
                 Resource: !Sub "arn:aws:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${UsersTable}*"
 
   Lambda:
