remove default MonthlyJobQuotaPerUser, set asf to 200 and autorift to 0, up jobs per batch to 200

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -78,7 +78,8 @@ jobs:
                 EDLPassword="${EDL_PASSWORD}" \
                 ImageTag="${IMAGE_TAG}" \
                 DomainName="${DOMAIN_NAME}" \
-                CertificateArn="${CERTIFICATE_ARN}"
+                CertificateArn="${CERTIFICATE_ARN}" \
+                MonthlyJobQuotaPerUser=200
 
       - name: Get associated PR
         if: github.ref == 'refs/heads/master'
