--- a/job_types.yml
+++ b/job_types.yml
@@ -28,6 +28,9 @@ RtcGamma:
     include_inc_map:
       default:  false
       api_schema_location: "#/components/schemas/include_inc_map"
+    include_area_map:
+      default: false
+      api_schema_location: "#/components/schemas/include_area_map"
   required_parameters:
     - granules
   command:
@@ -55,6 +58,8 @@ RtcGamma:
     - Ref::include_dem
     - --include-inc-map
     - Ref::include_inc_map
+    - --include-area-map
+    - Ref::include_area_map
     - Ref::granules
   validators:
     - check_dem_coverage
