--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -276,6 +276,7 @@ components:
           - filename
           - size
           - url
+          - s3
         additionalProperties: False
         properties:
           filename:
@@ -285,6 +286,20 @@ components:
             minimum: 0
           url:
             type: string
+          s3:
+            $ref: "#/components/schemas/s3_info"
+
+    s3_info:
+      type: object
+      additionalProperties: false
+      required:
+        - bucket
+        - key
+      properties:
+        bucket:
+          type: string
+        key:
+          type: string
 
     list_of_urls:
       type: array
