--- a/job_types.yml
+++ b/job_types.yml
@@ -31,6 +31,9 @@ RtcGamma:
     include_scattering_area:
       default: false
       api_schema_location: "#/components/schemas/include_scattering_area"
+    include_rgb:
+      default: false
+      api_schema_location: "#/components/schemas/include_rgb"
   required_parameters:
     - granules
   command:
@@ -60,6 +63,8 @@ RtcGamma:
     - Ref::include_inc_map
     - --include-scattering-area
     - Ref::include_scattering_area
+    - --include-rgb
+    - Ref::include_rgb
     - Ref::granules
   validators:
     - check_dem_coverage
