Upload log as it's own type, change log name, add log lifetime policy

--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -140,6 +140,11 @@ Resources:
                 Value: product
             ExpirationInDays: !Ref ProductLifetimeInDays
           - Status: Enabled
+            TagFilters:
+              - Key: file_type
+                Value: log
+            ExpirationInDays: !Ref ProductLifetimeInDays
+          - Status: Enabled
             AbortIncompleteMultipartUpload:
               DaysAfterInitiation: 1
 
