Add logs to openapi spec

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -217,6 +217,8 @@ components:
           $ref: "#/components/schemas/list_of_urls"
         thumbnail_images:
           $ref: "#/components/schemas/list_of_urls"
+        logs:
+          $ref: "#/components/schemas/list_of_urls"
         expiration_time:
           $ref: "#/components/schemas/datetime"
 
