add mising !Sub in upload-log cloudformation

--- a/apps/upload-log/upload-log-cf.yml
+++ b/apps/upload-log/upload-log-cf.yml
@@ -45,7 +45,7 @@ Resources:
                 Resource: !Sub "arn:aws:s3:::${Bucket}/*"
               - Effect: Allow
                 Action: logs:GetLogEvents
-                Resource: "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/batch/job*"
+                Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/batch/job*"
 
   Lambda:
     Type: AWS::Lambda::Function
