update ec2 allocation strategy to BEST_FIT_PROGRESSIVE

--- a/apps/compute-cf.yml
+++ b/apps/compute-cf.yml
@@ -55,7 +55,7 @@ Resources:
       Type: MANAGED
       ComputeResources:
         Type: SPOT
-        AllocationStrategy: SPOT_CAPACITY_OPTIMIZED
+        AllocationStrategy: BEST_FIT_PROGRESSIVE
         MinvCpus: 0
         MaxvCpus: 1600
         InstanceTypes:
