Allow get object tagging

--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -157,7 +157,9 @@ Resources:
         Statement:
           - Effect: Allow
             Principal: "*"
-            Action: s3:GetObject
+            Action:
+              - s3:GetObject
+              - s3:GetObjectTagging
             Resource: !Sub "${ContentBucket.Arn}/*"
           - Effect: Allow
             Principal: "*"
