--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -48,6 +48,10 @@ paths:
           in: query
           schema:
             $ref: "#/components/schemas/name"
+        - name: next_token
+          in: query
+          schema:
+            $ref: "#components/schemas/job_id"
 
       responses:
         "200":
