Allow job_type query parameter in GET /jobs

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -48,6 +48,10 @@ paths:
           in: query
           schema:
             $ref: "#/components/schemas/name"
+        - name: job_type
+          in: query
+          schema:
+            $ref: "#/components/schemas/job_type"
         - name: start_token
           in: query
           schema:
