implement cop30 dem coverage validator for RTC_GAMMA

--- a/job_types.yml
+++ b/job_types.yml
@@ -109,7 +109,7 @@ InsarGamma:
     - Ref::looks
     - Ref::granules
   validators:
-    - check_dem_coverage
+    - check_dem_coverage_legacy
   timeout: 10800
 
 Autorift:
