--- a/apps/api/requirements-api.txt
+++ b/apps/api/requirements-api.txt
@@ -1,6 +1,6 @@
 connexion[swagger-ui]
 cryptography
-flask
+flask>=1.1.2,<2.*
 flask_api
 Flask-Cors
 prance
@@ -9,3 +9,4 @@ requests
 serverless_wsgi
 shapely
 strict-rfc3339
+Werkzeug>=1.0.1,<2.*
