add include_wrapped_phase to docker command

--- a/job_types.yml
+++ b/job_types.yml
@@ -123,6 +123,8 @@ InsarGamma:
     - Ref::include_inc_map
     - --include-dem
     - Ref::include_dem
+    - --include-wrapped-phase
+    - Ref::include_wrapped_phase
     - --looks
     - Ref::looks
     - Ref::granules
