--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,21 +22,21 @@ jobs:
             template_bucket: cf-templates-aubvn3i9olmk-us-west-2
             image_tag: latest
             quota: 200
-            deploy_ref: refs/head/master
+            deploy_ref: refs/heads/master
 
           - environment: hyp3-test
             domain: hyp3-test-api.asf.alaska.edu
             template_bucket: cf-templates-aubvn3i9olmk-us-west-2
             image_tag: test
             quota: 200
-            deploy_ref: refs/head/develop
+            deploy_ref: refs/heads/develop
 
           - environment: hyp3-autorift
             domain: hyp3-autorift.asf.alaska.edu
             template_bucket: cf-templates-igavixdzdy7k-us-west-2
             image_tag: latest
             quota: 0
-            deploy_ref: refs/head/master
+            deploy_ref: refs/heads/master
 
     environment:
       name: ${{ matrix.environment }}
