setup watermap hotfix deployment and plugin

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,13 @@ jobs:
             quota: 0
             deploy_ref: refs/heads/master
 
+          - environment: hyp3-watermap
+              domain: hyp3-watermap.asf.alaska.edu
+              template_bucket: cf-templates-1217di08q7vwl-us-west-2
+              image_tag: test
+              quota: 0
+              deploy_ref: refs/heads/watermap
+
     environment:
       name: ${{ matrix.environment }}
       url: https://${{ matrix.domain }}
