Add WATER_MAP as option for job_type API parameter

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -255,6 +255,7 @@ components:
         - RTC_GAMMA
         - INSAR_GAMMA
         - AUTORIFT
+        - WATER_MAP
 
     datetime:
       description: Date and time object formatted according to ISO 8601
