modify ec2 instance type, add 10.0 as resolution option for RTC_GAMMA, WATER_MAP jobs

--- a/apps/compute-cf.yml
+++ b/apps/compute-cf.yml
@@ -59,7 +59,7 @@ Resources:
         MinvCpus: 0
         MaxvCpus: 1600
         InstanceTypes:
-          - r5d.xlarge
+          - r5d.2xlarge
         ImageId: !Ref AmiId
         Subnets: !Ref SubnetIds
         InstanceRole: !Ref InstanceProfile
