--- a/apps/compute-cf.yml
+++ b/apps/compute-cf.yml
@@ -59,7 +59,7 @@ Resources:
         MinvCpus: 0
         MaxvCpus: 1600
         InstanceTypes:
-          - r6g.4xlarge
+          - r5d.4xlarge
         ImageId: !Ref AmiId
         Subnets: !Ref SubnetIds
         InstanceRole: !Ref InstanceProfile
