add table resource to cf template for subscriptions

--- a/apps/main-cf.yml
+++ b/apps/main-cf.yml
@@ -208,3 +208,18 @@ Resources:
       KeySchema:
         - AttributeName: user_id
           KeyType: HASH
+
+  SubscriptionsTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      BillingMode: PAY_PER_REQUEST
+      AttributeDefinitions:
+        - AttributeName: subscription_id
+          AttributeType: S
+      KeySchema:
+        - AttributeName: subscription_id
+          KeyType: HASH
+      GlobalSecondaryIndexes:
+        KeySchema:
+          - AttributeName: user_id
+            KeyType: HASH
