--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -13,7 +13,6 @@ paths:
 
     post:
       description: Submits a list of jobs for processing.
-      operationId: hyp3_api.handlers.post_jobs
       requestBody:
         content:
           application/json:
@@ -30,7 +29,6 @@ paths:
 
     get:
       description: Get list of previously run jobs.
-      operationId: hyp3_api.handlers.get_jobs
       parameters:
         - name: status_code
           in: query
@@ -51,7 +49,7 @@ paths:
         - name: job_type
           in: query
           schema:
-            $ref: "#/components/schemas/job_type"
+            $ref: "./job_parameters.yml#components/schemas/job_type"
         - name: start_token
           in: query
           schema:
@@ -68,12 +66,11 @@ paths:
   /jobs/{job_id}:
     get:
       description: Get a previously run job.
-      operationId: hyp3_api.handlers.get_job_by_id
       parameters:
         - name: job_id
           in: path
           schema:
-            $ref: "#/components/schemas/job_id"
+            $ref: "#/components/schemas/job_or_subscription_id"
           required: true
 
       responses:
@@ -87,7 +84,6 @@ paths:
   /user:
     get:
       description: Get information about the logged in user.
-      operationId: hyp3_api.handlers.get_user
       responses:
         "200":
           description: 200 response
@@ -95,6 +91,23 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/user"
+
+  /subscriptions:
+    post:
+      description: Adds a subscription with seach criteria and processing parameters to use to process data as it becomes available
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/subscriptions_body"
+        required: true
+      responses:
+        "200":
+          description: 200 response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/subscriptions_response"
 
 components:
   schemas:
@@ -124,6 +137,44 @@ components:
           $ref: "#/components/schemas/list_of_jobs"
         next:
           $ref: "#/components/schemas/next_url"
+
+    subscriptions_body:
+      description: foo
+      type: object
+      required:
+        - search_parameters
+        - job_parameters
+        - job_type
+        - name
+      properties:
+        search_parameters:
+          $ref: "#/components/schemas/search_parameters"
+        job_parameters:
+          $ref: "./job_parameters.yml#components/schemas/job_parameters"
+        job_type:
+          $ref: "./job_parameters.yml#components/schemas/job_type"
+        name:
+          $ref: "#/components/schemas/name"
+
+    subscriptions_response:
+      description: foo
+      type: object
+      required:
+        - search_parameters
+        - job_parameters
+        - job_type
+        - name
+      properties:
+        subscription_id:
+          $ref: "#/components/schemas/job_or_subscription_id"
+        search_parameters:
+          $ref: "#/components/schemas/search_parameters"
+        job_parameters:
+          $ref: "./job_parameters.yml#components/schemas/job_parameters"
+        job_type:
+          $ref: "./job_parameters.yml#components/schemas/job_type"
+        name:
+          $ref: "#/components/schemas/name"
 
     user:
       description: Information about a user (quota, user id)
@@ -184,7 +235,7 @@ components:
 
       properties:
         job_type:
-          $ref: "#/components/schemas/job_type"
+          $ref: "./job_parameters.yml#components/schemas/job_type"
         job_parameters:
           $ref: "./job_parameters.yml#components/schemas/job_parameters"
         name:
@@ -194,6 +245,10 @@ components:
       type: array
       items:
         $ref: "#/components/schemas/job"
+
+    search_parameters:
+      description: parameters used to find data from the ASF Search API
+      type: object
 
     job:
       description: Contains information about a submitted job.
@@ -208,11 +263,11 @@ components:
       additionalProperties: false
       properties:
         job_id:
-          $ref: "#/components/schemas/job_id"
+          $ref: "#/components/schemas/job_or_subscription_id"
         user_id:
           $ref: "#/components/schemas/user_id"
         job_type:
-          $ref: "#/components/schemas/job_type"
+          $ref: "./job_parameters.yml#components/schemas/job_type"
         job_parameters:
           $ref: "./job_parameters.yml#components/schemas/job_parameters"
         request_time:
@@ -236,8 +291,8 @@ components:
       type: boolean
       default: false
 
-    job_id:
-      description: Unique identifier for a job
+    job_or_subscription_id:
+      description: Unique identifier for a job or subscription
       type: string
       format: uuid
       example: 27836b79-e5b2-4d8f-932f-659724ea02c3
@@ -246,15 +301,6 @@ components:
       description: Username from Earthdata Login.
       type: string
       example: myUserId
-
-    job_type:
-      description: Type of process to run this job.
-      type: string
-      example: RTC_GAMMA
-      enum:
-        - RTC_GAMMA
-        - INSAR_GAMMA
-        - AUTORIFT
 
     datetime:
       description: Date and time object formatted according to ISO 8601
