WIP toward getting a POST endpoint for subscriptions

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -248,6 +248,7 @@ components:
 
     search_parameters:
       description: parameters used to find data from the ASF Search API
+      additionalProperties: true
       type: object
 
     job:
