Get routing api-spec and test for initial subscription work

--- a/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
+++ b/apps/api/src/hyp3_api/api-spec/openapi-spec.yml
@@ -160,6 +160,7 @@ components:
       description: foo
       type: object
       required:
+        - subscription_id
         - search_parameters
         - job_parameters
         - job_type
